# task-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  uwsgi.ini
api/: app.py
app/: __init__.py
app/db/: models.py
app/routes/: task.py
app/schemas/: task.py
src/: TodoApp.css  TodoApp.js  index.css  index.js
src/components/: TodoForm.js  TodoItem.js  TodoList.js
src/hooks/: useTodos.js
src/services/: todoService.js
tests/: conftest.py  test_api.py  test_app.py
