[tool.poetry]
name = "api"
version = "0.0.1"
description = "Task Manager API"
authors = ["kjplunkett <kris.j.plunkett@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
