[tool.poetry]
name = "api"
version = "0.0.1"
description = "Task Manager API"
authors = ["kjplunkett <kris.j.plunkett@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poe.tasks]
lint = "flake8" # Lint with Flake8
format = "black ." # Format with Black
test = "pytest --cov=api tests/" # Test with pytest and pytest-cov

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
